# SecureNote

./: CMakeLists.txt
DataKeeper/: CMakeLists.txt
include/Common/: NonCopyable.h
include/DAL/: IDataContext.h  IQueryable.h  NotesFakeDataContext.h  NotesRepository.h  Query.h
include/GUI/: CalendarForm.h  MainAreaForm.h  MainWindow.h  NoteForm.h  NotesBrowserForm.h  PasswordNoteForm.h  StyleConfigurator.h  TopPanel.h
include/Model/: Note.h  PagePassword.h  User.h
include/Security/: CryptoOpenSSL.h  HexUtils.h  ICrypto.h  IShaProvider.h  SecureData.h  ShaProvider.h
include/WebCapture/: IWebScreenshoter.h  WebScreenshoter.h
src/: main.cpp
src/DAL/: IDataContext.cpp  IQueryable.cpp  NotesFakeDataContext.cpp  NotesRepository.cpp
src/GUI/: CalendarForm.cpp  MainAreaForm.cpp  MainWindow.cpp  NoteForm.cpp  NotesBrowserForm.cpp  PasswordNoteForm.cpp  StyleConfigurator.cpp  TopPanel.cpp
src/Model/: Note.cpp  PagePassword.cpp  User.cpp
src/Security/: CryptoOpenSSL.cpp  HexUtils.cpp  ShaProvider.cpp
src/UI/: CalendarForm.ui  MainAreaForm.ui  MainWindow.ui  MainWindow.ui.autosave  NoteForm.ui  NoteForm.ui.autosave  NotesBrowserForm.ui  PasswordNoteForm.ui  TopPanel.ui
src/WebCapture/: WebScreenshoter.cpp
test/: CommonNamespaces.h  SecurityAes.cpp  SecurityTest.cpp  SecurityTest.h
test/NotesRepository/: GetNotesTest.cpp  NotesRepositoryTest.cpp  NotesRepositoryTest.h
test/Security/: SecurityAes.cpp  SecuritySHA.cpp  SecurityStringToHex.cpp  SecurityTest.cpp  SecurityTest.h
